Cocoa: ensure app menu makes space from browser action overflow container

https://chromium-review.googlesource.com/c/chromium/src/+/1091497 removed
an item from the app menu that never appeared on Mac. Unfortunately,
even though the item was never *displayed*, it appears to have factored
into NSMenu's calculation for what its max size should be.

When the item was removed, the max size is no longer able to account
for multiple rows in the browser action overflow container, so all
rows but the last are clipped.

This change removes and readds the extension overflow container when it's
finished sizing itself to prompt the menu to reevaluate its height.
We can't do this before we add the item to the menu because the menu's
width factors into the overflow container's size calculation. It seems
like there should be a less awkward way to do this, but I can't find it.

Bug: 862005
Change-Id: Ib17ed810855041226786b16ca94f0a60d88dc892
Reviewed-on: https://chromium-review.googlesource.com/1145133
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576905}
Former-commit-id: 86341923722bec89a92a681b582d5e465c690541